# Proj_sensor_detect

./: CMakeLists.txt  CMakeLists.txt.user.1a6d645  CMakeLists.txt.user.80cf8bf  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h  widget.h.autosave  widget.ui  widget.ui.autosave
assist_func/: assist.cpp  assist.cpp.autosave  assist.h
data_acquire/: dataacquireai.cpp  dataacquireai.h  dataacquireci.cpp  dataacquireci.h  dataacquiredi.cpp  dataacquiredi.cpp.autosave  dataacquiredi.h  lowpassfilter.cpp  lowpassfilter.h
devices/: hydraulicstation.cpp  hydraulicstation.h  motor.cpp  motor.h  variableresis.cpp  variableresis.h
functionality/: dataexport.cpp  dataexport.h  datasave.cpp  datasave.h  electricitycalc.cpp  electricitycalc.h  errorprompt.cpp  errorprompt.h  measureresis.cpp  measureresis.h
sensors/: angleencoder.cpp  angleencoder.h  anglesensor.cpp  anglesensor.h  pressuresensor.cpp  pressuresensor.cpp.autosave  pressuresensor.h  proximityswitch.cpp  proximityswitch.h  resis.cpp  resis.h
tele_com/: modbus.cpp  modbus.cpp.autosave  modbus.h  modbus.h.autosave  serialportcom.cpp  serialportcom.h
ui/: paramwin_angleencoder.cpp  paramwin_angleencoder.h  paramwin_angleencoder.ui  paramwin_anglesensor.cpp  paramwin_anglesensor.h  paramwin_anglesensor.ui  paramwin_pressuresensor.cpp  paramwin_pressuresensor.h  paramwin_pressuresensor.ui  paramwin_proximityswitch.cpp  paramwin_proximityswitch.h  paramwin_proximityswitch.ui
ui_func/: funcwin_dataexport.cpp  funcwin_dataexport.h  funcwin_dataexport.ui  funcwin_datareview.cpp  funcwin_datareview.cpp.autosave  funcwin_datareview.h  funcwin_datareview.ui  funcwin_errorprompt.cpp  funcwin_errorprompt.h  funcwin_errorprompt.ui
ui_param/: paramwin_angleencoder.cpp  paramwin_angleencoder.h  paramwin_angleencoder.ui  paramwin_anglesensor.cpp  paramwin_anglesensor.h  paramwin_anglesensor.h.autosave  paramwin_anglesensor.ui  paramwin_anglesensor.ui.autosave  paramwin_mea_resis.cpp  paramwin_mea_resis.h  paramwin_mea_resis.ui  paramwin_pressuresensor.cpp  paramwin_pressuresensor.h  paramwin_pressuresensor.ui  paramwin_proximityswitch.cpp  paramwin_proximityswitch.h  paramwin_proximityswitch.ui
ui_show/: showwin_angleencoder.cpp  showwin_angleencoder.cpp.autosave  showwin_angleencoder.h  showwin_angleencoder.h.autosave  showwin_angleencoder.ui  showwin_anglesensor.cpp  showwin_anglesensor.h  showwin_anglesensor.ui  showwin_anglesensor.ui.autosave  showwin_measureresis.cpp  showwin_measureresis.h  showwin_measureresis.ui  showwin_pressuresensor.cpp  showwin_pressuresensor.cpp.autosave  showwin_pressuresensor.h  showwin_pressuresensor.h.autosave  showwin_pressuresensor.ui  showwin_proximityswitch.cpp  showwin_proximityswitch.h  showwin_proximityswitch.h.autosave  showwin_proximityswitch.ui
